handle "." for input, fix the border overflow on protocol stat

--- a/src/components/ProtocolStats/ProtocolStats.scss
+++ b/src/components/ProtocolStats/ProtocolStats.scss
@@ -36,7 +36,7 @@
         .raft__protocol-stats__stat__separator {
           height: 56px;
           border-left: 1px solid var(--raftWallet);
-          margin: 0 16px;
+          margin: 0 12px;
         }
 
         .common-ui__logo {
